have added more question

--- a/LeetCode1.ipynb
+++ b/LeetCode1.ipynb
@@ -1217,45 +1217,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "a9b061a8-94c3-47a9-a176-46c79ccf69ed",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<string>, line 17)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m<string>:17\u001b[1;36m\u001b[0m\n\u001b[1;33m    if ast:\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 10]\n"
      ]
     }
    ],
    "source": [
-    "#735.Asteroid Collision\n",
     "from typing import List\n",
+    "\n",
     "class Solution:\n",
     "    def asteroidCollision(self, asteroids: List[int]) -> List[int]:\n",
     "        stack = []\n",
     "\n",
     "        for ast in asteroids:\n",
-    "             while stack and ast < 0 and stack[-1] > 0:\n",
-    "                   diff  = a + stack[-1]\n",
-    "                    if diff < 0:\n",
-    "                        stack.pop()\n",
-    "                    elif diff > 0:\n",
-    "                        ast = 0\n",
-    "                    else:\n",
-    "                        ast =0\n",
-    "                        stack.pop()\n",
-    "              if ast:\n",
+    "            while stack and ast < 0 and stack[-1] > 0:\n",
+    "                diff = ast + stack[-1]\n",
+    "\n",
+    "                if diff < 0:\n",
+    "                    stack.pop()      # stack asteroid destroyed\n",
+    "                elif diff > 0:\n",
+    "                    ast = 0          # current asteroid destroyed\n",
+    "                else:\n",
+    "                    ast = 0\n",
+    "                    stack.pop()      # both destroyed\n",
+    "\n",
+    "            if ast:\n",
     "                stack.append(ast)\n",
+    "\n",
     "        return stack\n",
-    "        \n",
-    "            \n",
-    "        \n",
+    "\n",
+    "\n",
     "obj = Solution()\n",
-    "result = obj.asteroidCollision([5,10,-5])\n",
-    "print(result)"
+    "result = obj.asteroidCollision([5, 10, -5])\n",
+    "print(result)\n"
    ]
   },
   {
@@ -1304,6 +1305,161 @@
     "                    \n",
     "obj = Solution()\n",
     "result = obj.backspaceCompare(\"xywrrmp\",\"xywrrmu#p\")\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "4a52f25f-a45b-4c33-ad88-2563ae55b15e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#150. Evaluate Reverse Polish Notation\n",
+    "class Solution:\n",
+    "    def evalRPN(self, tokens: List[str]) -> int:\n",
+    "        stack = []\n",
+    "        for n in tokens:\n",
+    "           if n not in \"+-*/\":\n",
+    "               stack.append(n)\n",
+    "           else:\n",
+    "               b = int(stack.pop())\n",
+    "               a = int(stack.pop())\n",
+    "               if n == \"+\":\n",
+    "                   stack.append(a + b)\n",
+    "               elif n == \"-\":\n",
+    "                   stack.append(a - b)\n",
+    "               elif n == \"*\":\n",
+    "                   stack.append(a * b)\n",
+    "               else:\n",
+    "                   stack.append(int(a / b))\n",
+    "        return stack[0]\n",
+    "                                   \n",
+    "obj = Solution()\n",
+    "result = obj.evalRPN([\"2\",\"1\",\"+\",\"3\",\"*\"])\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "95b0148a-ba30-4ab6-94b7-9b85ec5f7748",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5]\n",
+      "[5, 2]\n",
+      "[5]\n",
+      "[5, 10]\n",
+      "[5, 10, 15]\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "#682 .Baseball Game\n",
+    "class Solution:\n",
+    "    def calPoints(self, operations: List[str]) -> int:\n",
+    "        stack = []\n",
+    "        for n in operations:\n",
+    "            if n == \"+\":\n",
+    "                stack.append(stack[-1] + stack[-2])\n",
+    "            elif n == \"D\":\n",
+    "                stack.append(2 * stack[-1])\n",
+    "            elif n == \"C\":\n",
+    "                    stack.pop()\n",
+    "            else:\n",
+    "                stack.append(int(n))\n",
+    "            print(stack)\n",
+    "        return sum(stack)\n",
+    "        \n",
+    "obj = Solution()\n",
+    "result = obj.calPoints([\"5\",\"2\",\"C\",\"D\",\"+\"])\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "bf72235c-6807-498b-b973-d68eba5e6b7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat\n",
+      "cat dna mice\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3775 Reverse Words With Same Vowel Count\n",
+    "#Determine how many vowels appear in the first word. Then, reverse each following word that has the same vowel count. Leave all remaining words unchanged\n",
+    "class Solution:\n",
+    "    def reverseWords(self, s: str) -> str:\n",
+    "        vowels  = {\"a\",\"e\",\"i\",\"o\",\"u\"}\n",
+    "        first_cnt = 0 \n",
+    "        words = s.split()\n",
+    "    \n",
+    "        for ch in words[0]:\n",
+    "             if ch in vowels:\n",
+    "                 first_cnt += 1\n",
+    "        for i in range(1 , len(words)):\n",
+    "            count = 0 \n",
+    "            for c in words[i]:\n",
+    "                if c in vowels:\n",
+    "                    count += 1\n",
+    "            if count == first_cnt:\n",
+    "                words[i] = words[i][::-1]\n",
+    "        return \" \".join(words)\n",
+    "                 \n",
+    "obj = Solution()\n",
+    "result = obj.reverseWords(\"cat and mice\")\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "2dd70d69-c43a-4bcd-9296-ab0dcb4380de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2390. Removing Stars From a String\n",
+    "\n",
+    "class Solution:\n",
+    "    def removeStars(self, s: str) -> str:\n",
+    "        stack = []\n",
+    "        for ch in s:\n",
+    "            if ch == \"*\":\n",
+    "                stack.pop()\n",
+    "            else:\n",
+    "                stack.append(ch)\n",
+    "        return \"\".join(stack)\n",
+    "        \n",
+    "        \n",
+    "obj = Solution()\n",
+    "result = obj.removeStars(\"erase*****\")\n",
     "print(result)"
    ]
   }
