--- a/LeetCode1.ipynb
+++ b/LeetCode1.ipynb
@@ -2,17 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "30917d63-51fe-4341-97d5-ecb3dd16c845",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "data {7: 0} 0\n",
+      "-6\n",
+      "data {7: 0, 15: 1} 1\n",
+      "7\n",
+      "for understand 0 2\n",
+      "result:-  [0, 2]\n"
+     ]
+    }
+   ],
    "source": [
     "# Given an array of integers nums and an integer target, return indices of the two numbers such that they add up to target.\n",
     "# You may assume that each input would have exactly one solution, and you may not use the same element twice.\n",
     "# You can return the answer in any order.\n",
-    "\n",
     "from typing import List\n",
-    "\n",
     "class Solution:\n",
     "    def twoSum(self, nums: List[int], target: int) -> List[int]:\n",
     "        data = {}\n",
@@ -22,31 +34,79 @@
     "            if newNum in data:\n",
     "                print(\"for understand\",data[newNum], i)\n",
     "                return [data[newNum], i]\n",
-    "                \n",
-    "            \n",
     "            data[num] = i \n",
     "            print(\"data\",data, i)\n",
-    "\n",
+    "            \n",
     "nums = [7, 15, 2 ,11]\n",
     "target = 9\n",
     "obj = Solution()\n",
     "result = obj.twoSum(nums, target)\n",
-    "print(\"result:- \",result)\n",
-    "\n",
-    "\n"
+    "print(\"result:- \",result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "083f67d9-0513-479b-8893-2e70ab14114d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total:\n",
+      "7 -> 0 -> 8 -> None\n"
+     ]
+    }
+   ],
    "source": [
-    "# #2. Add Two Numbers\n",
-    "# class Solution:\n",
-    "#     def addTwoNumber(self,l1 :[listNode], l2:[ListNode]):\n",
-    "        \n"
+    "# #2. Add Two Numbers \n",
+    "# just for understanding they don't ask in interview \n",
+    "class ListNode:\n",
+    "    def __init__(self, val =0, next = None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "class Solution:\n",
+    "     def addTwoNumber(self,l1 :ListNode, l2:ListNode):\n",
+    "         dummy = ListNode(0)\n",
+    "         current = dummy\n",
+    "         carry = 0\n",
+    "         while l1 or l2 or carry:\n",
+    "             v1 = l1.val if l1 else 0\n",
+    "             v2 = l2.val if l2 else 0\n",
+    "\n",
+    "             total = v1 + v2 + carry\n",
+    "\n",
+    "             carry = total // 10\n",
+    "             value = total % 10\n",
+    "             current.next = ListNode(value)\n",
+    "             current = current.next\n",
+    "\n",
+    "             if l1:\n",
+    "                 l1 = l1.next\n",
+    "             if l2:\n",
+    "                 l2 = l2.next\n",
+    "         return dummy.next\n",
+    "def create_linked_list(arr):\n",
+    "    dummy = ListNode(0)\n",
+    "    current = dummy\n",
+    "    for num in arr:\n",
+    "        current.next = ListNode(num)\n",
+    "        current = current.next\n",
+    "    return dummy.next\n",
+    "def print_linked_list(head):\n",
+    "    while head:\n",
+    "        print(head.val, end=\" -> \")\n",
+    "        head = head.next\n",
+    "    print(\"None\")\n",
+    "             \n",
+    "l1 = create_linked_list([2, 4, 3])\n",
+    "l2 = create_linked_list([5, 6, 4])\n",
+    "\n",
+    "obj = Solution()\n",
+    "result = obj.addTwoNumber(l1, l2)\n",
+    "print(\"total:\")\n",
+    "print_linked_list(result)"
    ]
   },
   {
@@ -451,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "2e6b3c28-1002-4865-b865-30072696b844",
    "metadata": {},
    "outputs": [
@@ -459,6 +519,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "aet\n",
+      "aet\n",
+      "ant\n",
+      "aet\n",
+      "ant\n",
+      "abt\n",
       "[['eat', 'tea', 'ate'], ['tan', 'nat'], ['bat']]\n"
      ]
     }
@@ -687,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "b510a919-e00d-49c7-95fe-00006de19270",
    "metadata": {},
    "outputs": [
@@ -741,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "6ffabc42-bbb6-4172-aba1-6928d8e8f7b1",
    "metadata": {},
    "outputs": [
@@ -751,7 +817,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +833,7 @@
     "        l+=1\n",
     "        r-=1\n",
     "    return True\n",
-    "Palin(\"dad\")"
+    "Palin(\"abab\")"
    ]
   },
   {
@@ -802,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "527b6ebe-7f3d-4406-bcc1-e2ffd2ddca42",
    "metadata": {},
    "outputs": [
@@ -826,7 +892,6 @@
     "            if cur_sum < 0:\n",
     "                cur_sum = 0\n",
     "        return max_sum\n",
-    "\n",
     "obj = Solution()\n",
     "result = obj.maxSubArray([-2,1,-3,4,-1,2,1,-5,4])\n",
     "print(result)"
@@ -1230,8 +1295,8 @@
     }
    ],
    "source": [
+    "#735 .Asteroid Collision\n",
     "from typing import List\n",
-    "\n",
     "class Solution:\n",
     "    def asteroidCollision(self, asteroids: List[int]) -> List[int]:\n",
     "        stack = []\n",
@@ -1261,12 +1326,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "764f11e2-cb55-4f5e-8c0d-3b8b12136e48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "#739"
+    "#739. Daily Temperatures\n",
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def dailyTemperatures(self, temperatures: List[int]) -> List[int]:\n",
+    "        n = len(temperatures)\n",
+    "        answer = [0] * n\n",
+    "        stack = []\n",
+    "        for i in range(n):\n",
+    "            while stack and  temperatures[i] > temperatures[stack[-1]]:\n",
+    "                prev_day = stack.pop()\n",
+    "                answer[prev_day] = i - prev_day\n",
+    "                \n",
+    "            \n",
+    "            stack.append(i)\n",
+    "        return answer\n",
+    "        \n",
+    "obj = Solution()\n",
+    "result = obj.dailyTemperatures([30,40,50,60])\n",
+    "print(result)"
    ]
   },
   {
@@ -1310,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "4a52f25f-a45b-4c33-ad88-2563ae55b15e",
    "metadata": {},
    "outputs": [
@@ -1324,6 +1415,7 @@
    ],
    "source": [
     "#150. Evaluate Reverse Polish Notation\n",
+    "from typing import List\n",
     "class Solution:\n",
     "    def evalRPN(self, tokens: List[str]) -> int:\n",
     "        stack = []\n",
@@ -1391,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "bf72235c-6807-498b-b973-d68eba5e6b7b",
    "metadata": {},
    "outputs": [
@@ -1399,14 +1491,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cat\n",
       "cat dna mice\n"
      ]
     }
    ],
    "source": [
     "#3775 Reverse Words With Same Vowel Count\n",
-    "#Determine how many vowels appear in the first word. Then, reverse each following word that has the same vowel count. Leave all remaining words unchanged\n",
+    "#Determine how many vowels appear in the first word. Then, reverse each following word that has the same vowel count. \n",
+    "#Leave all remaining words unchanged\n",
     "class Solution:\n",
     "    def reverseWords(self, s: str) -> str:\n",
     "        vowels  = {\"a\",\"e\",\"i\",\"o\",\"u\"}\n",
@@ -1432,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 36,
    "id": "2dd70d69-c43a-4bcd-9296-ab0dcb4380de",
    "metadata": {},
    "outputs": [
@@ -1440,13 +1532,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "lecoe\n"
      ]
     }
    ],
    "source": [
     "#2390. Removing Stars From a String\n",
-    "\n",
     "class Solution:\n",
     "    def removeStars(self, s: str) -> str:\n",
     "        stack = []\n",
@@ -1457,9 +1548,131 @@
     "                stack.append(ch)\n",
     "        return \"\".join(stack)\n",
     "        \n",
-    "        \n",
     "obj = Solution()\n",
-    "result = obj.removeStars(\"erase*****\")\n",
+    "result = obj.removeStars(\"leet**cod*e\")\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ca712003-2404-49c5-b594-520dc74c81cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1700. Number of Students Unable to Eat Lunch\n",
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def countStudents(self, students: List[int], sandwiches: List[int]) -> int:\n",
+    "        count0 = students.count(0)\n",
+    "        count1 = students.count(1)\n",
+    "        for s in sandwiches:\n",
+    "            if s == 0:\n",
+    "                if count0 == 0:\n",
+    "                    break\n",
+    "                count0 -= 1\n",
+    "            else:\n",
+    "                if count1 == 0:\n",
+    "                    break\n",
+    "                count1 -= 1\n",
+    "        return count0 + count1\n",
+    "            \n",
+    "obj = Solution()\n",
+    "result = obj.countStudents([1,1,1,0,0,1],[1,0,0,0,1,1])\n",
+    "print(result)      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95dbb652-5282-49ce-8044-f03b2029a4f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#933"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "893f9240-bd58-420f-9cbd-43c21fa8d91c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([[0, 5], [1, 1], [2, 1], [3, 1]])\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2073. Time Needed to Buy Tickets\n",
+    "from collections import deque\n",
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def timeRequiredToBuy(self, tickets: List[int], k: int) -> int:\n",
+    "        queue = deque()\n",
+    "        ans = 0\n",
+    "        i = 0\n",
+    "        while i < len(tickets):\n",
+    "            queue.append([i , tickets[i]])\n",
+    "            i += 1\n",
+    "        while queue:\n",
+    "            i , v = queue.popleft()\n",
+    "            v -= 1\n",
+    "            ans += 1\n",
+    "            if v != 0:\n",
+    "                queue.append([i , v])\n",
+    "            if i == k and v == 0:\n",
+    "                return ans\n",
+    "        return ans\n",
+    "\n",
+    "obj = Solution()\n",
+    "result = obj.timeRequiredToBuy([5,1,1,1],0)\n",
+    "print(result)  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e69d2469-cccb-410a-a0a4-bf6fa3fe1cf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[24, 12, 8, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 238. Product of Array Except Self\n",
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def productExceptSelf(self, nums: List[int]) -> List[int]:\n",
+    "        res = [1] * len(nums)\n",
+    "        prefix = 1 \n",
+    "        for i in range(len(nums)):\n",
+    "            res[i] = prefix\n",
+    "            prefix = prefix * nums[i]\n",
+    "        postfix = 1\n",
+    "        for i in range(len(nums)-1,-1,-1):\n",
+    "            res[i] = postfix * res[i]\n",
+    "            postfix = postfix * nums[i]\n",
+    "        return res\n",
+    "obj =  Solution()\n",
+    "result = obj.productExceptSelf([1,2,3,4])\n",
     "print(result)"
    ]
   }
